# raggy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  raggy  raggy.ps1  raggy.py  raggy_config_example.yaml  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: test.yml
tests/: conftest.py  test_bm25.py  test_chunking.py  test_document_processing.py  test_query_processor.py  test_raggy.py
